--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Burgershot Menu</title>
+	<title>The Smokers Garden</title>
 	<link rel="shortcut icon" href="images/logo.png" />
 	<link rel="stylesheet" href="index.css" />
 	<link rel="stylesheet" href="../style/font-awesome-4.7.0/css/font-awesome.min.css"> </head>
