--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body onLoad="loadPage()">
 	<div id="form">
 		<div class="form-group">
-			<span style="font-weight: bold;">Burgershot Menu</span><br />
+			<span style="font-weight: bold;">The Smokers Garden</span><br />
 			<input type="checkbox" id="darkmode" name="darkmode" value="darkmode" />
 			<label for="darkmode">Darkmode</label>
 			<span id="action-buttons">
