--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>The Smokers Garden</title>
+	<title>YellowJack</title>
 	<link rel="shortcut icon" href="images/logo.png" />
 	<link rel="stylesheet" href="index.css" />
 	<link rel="stylesheet" href="../style/font-awesome-4.7.0/css/font-awesome.min.css"> </head>
@@ -11,7 +11,7 @@
 <body onLoad="loadPage()">
 	<div id="form">
 		<div class="form-group">
-			<span style="font-weight: bold;">The Smokers Garden</span><br />
+			<span style="font-weight: bold;">YellowJack</span><br />
 			<input type="checkbox" id="darkmode" name="darkmode" value="darkmode" />
 			<label for="darkmode">Darkmode</label>
 			<span id="action-buttons">
